--- a/.github/workflows/script-injection.yml
+++ b/.github/workflows/script-injection.yml
@@ -8,10 +8,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Assign label
+        env:
+          ISSUE:  ${{ github.event.issue.title }}
         run: |
-          issue_title="${{ github.event.issue.title }}"
-          if [[ "$issue_title" == *"bug"* ]]; then
+          if [[ $ISSUE == *"bug"* ]]; then
           echo "Issue is about a bug!"
+          echo $ISSUE
+          echo ${{ env.ISSUE }}
           else
           echo "Issue is not about a bug"
           fi
