--- a/.github/workflows/label-issues-real.yml
+++ b/.github/workflows/label-issues-real.yml
@@ -3,6 +3,10 @@ on:
   issues:
     types:
       - opened
+permissions:
+ issues: write
+ pages: write
+
 jobs:
   assign-label:
     runs-on: ubuntu-latest
